docs: Update docs

--- a/docs/latex/blocks_list_8h_source.tex
+++ b/docs/latex/blocks_list_8h_source.tex
@@ -190,7 +190,7 @@
 \DoxyCodeLine{00186\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (uint32\_t\ i\ =\ 0;\ i\ <\ len;\ i++)}
 \DoxyCodeLine{00187\ \ \ \ \ \ \ \ \ \ \ \ \ \{}
 \DoxyCodeLine{00188\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{auto}\ idx\ =\ innerIdxOffset(start\_block,\ start\_pos,\ i);}
-\DoxyCodeLine{00189\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{auto}\ idx\_offset\ =\ innerIdxOffset(start\_block,\ start\_pos,\ i\ +\ offset);;}
+\DoxyCodeLine{00189\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{auto}\ idx\_offset\ =\ innerIdxOffset(start\_block,\ start\_pos,\ i\ +\ offset);}
 \DoxyCodeLine{00190\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ this-\/>setElem(idx\_offset.first(),\ idx\_offset.second(),}
 \DoxyCodeLine{00191\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ this-\/>getElem(idx.first(),\ idx.second()));}
 \DoxyCodeLine{00192\ \ \ \ \ \ \ \ \ \ \ \ \ \}}
