--- a/docs/latex/classoriginal_1_1forward_chain.tex
+++ b/docs/latex/classoriginal_1_1forward_chain.tex
@@ -132,9 +132,11 @@ const char \texorpdfstring{$\ast$}{*} {\bfseries to\+CString} (bool enter) const
 \item 
 \mbox{\hyperlink{classoriginal_1_1iterable_1_1iter_adaptor}{iter\+Adaptor}} {\bfseries last} () const
 \item 
-{\footnotesize template$<$typename Callback = transform$<$\+TYPE$>$$>$ }\\void {\bfseries for\+Each} (Callback operation=Callback\{\})
+{\footnotesize template$<$typename Callback = transform$<$\+TYPE$>$$>$ \newline
+requires Operation$<$Callback, TYPE$>$}\\void {\bfseries for\+Each} (Callback operation=Callback\{\})
 \item 
-{\footnotesize template$<$typename Callback$>$ }\\auto {\bfseries for\+Each} (Callback operation) -\/$>$ void
+{\footnotesize template$<$typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_operation}{original\+::\+Operation}}$<$Callback, TYPE$>$}\\auto {\bfseries for\+Each} (Callback operation) -\/$>$ void
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Additional Inherited Members}
 \doxysubsection*{Static Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1printable}{original\+::printable}}}
