--- a/docs/latex/classoriginal_1_1iterable.tex
+++ b/docs/latex/classoriginal_1_1iterable.tex
@@ -56,11 +56,13 @@ virtual \mbox{\hyperlink{classoriginal_1_1base_iterator}{base\+Iterator}}$<$ TYP
 \Hypertarget{classoriginal_1_1iterable_ab25370df2bf165184afa9c885e97fad2}\label{classoriginal_1_1iterable_ab25370df2bf165184afa9c885e97fad2} 
 \mbox{\hyperlink{classoriginal_1_1iterable_1_1iter_adaptor}{iter\+Adaptor}} {\bfseries last} () const
 \item 
-\Hypertarget{classoriginal_1_1iterable_aa50662a32e44d1954d370de307e9c5df}\label{classoriginal_1_1iterable_aa50662a32e44d1954d370de307e9c5df} 
-{\footnotesize template$<$typename Callback = transform$<$\+TYPE$>$$>$ }\\void {\bfseries for\+Each} (Callback operation=Callback\{\})
+\Hypertarget{classoriginal_1_1iterable_ac47b32bf3a11d2d41ad846257816d06e}\label{classoriginal_1_1iterable_ac47b32bf3a11d2d41ad846257816d06e} 
+{\footnotesize template$<$typename Callback = transform$<$\+TYPE$>$$>$ \newline
+requires Operation$<$Callback, TYPE$>$}\\void {\bfseries for\+Each} (Callback operation=Callback\{\})
 \item 
-\Hypertarget{classoriginal_1_1iterable_acaa085bf1b48d84b1d30977622384b86}\label{classoriginal_1_1iterable_acaa085bf1b48d84b1d30977622384b86} 
-{\footnotesize template$<$typename Callback$>$ }\\auto {\bfseries for\+Each} (Callback operation) -\/$>$ void
+\Hypertarget{classoriginal_1_1iterable_ab4b672471be34b7c0f459ef92c33b7ef}\label{classoriginal_1_1iterable_ab4b672471be34b7c0f459ef92c33b7ef} 
+{\footnotesize template$<$typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_operation}{original\+::\+Operation}}$<$Callback, TYPE$>$}\\auto {\bfseries for\+Each} (Callback operation) -\/$>$ void
 \end{DoxyCompactItemize}
 
 
