--- a/docs/latex/filter_stream_8h_source.tex
+++ b/docs/latex/filter_stream_8h_source.tex
@@ -286,7 +286,7 @@
 \DoxyCodeLine{00282\ }
 \DoxyCodeLine{00283\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{while}\ (it\_stream-\/>isValid())\{}
 \DoxyCodeLine{00284\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (it\_stream-\/>get()\ !=\ \textcolor{keyword}{nullptr})\{}
-\DoxyCodeLine{00285\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ value\_stack.pushEnd((*it\_stream-\/>get())(t));}
+\DoxyCodeLine{00285\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ value\_stack.pushEnd(it\_stream-\/>get()-\/>operator()(t));}
 \DoxyCodeLine{00286\ \ \ \ \ \ \ \ \ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (it\_ops-\/>isValid())\{}
 \DoxyCodeLine{00287\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{switch}\ (it\_ops-\/>get())\ \{}
 \DoxyCodeLine{00288\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{case}\ opts::NOT:}
