--- a/docs/latex/printable_8h_source.tex
+++ b/docs/latex/printable_8h_source.tex
@@ -117,7 +117,7 @@
 \DoxyCodeLine{00113\ \ \ \ \ \}}
 \DoxyCodeLine{00114\ }
 \DoxyCodeLine{00115\ \ \ \ \ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ TYPE>}
-\DoxyCodeLine{00116\ \ \ \ \ \textcolor{keyword}{auto}\ original::printable::formatString(TYPE*\ \textcolor{keyword}{const}\&\ ptr)\ -\/>\ std::string}
+\DoxyCodeLine{00116\ \ \ \ \ \textcolor{keyword}{inline}\ \textcolor{keyword}{auto}\ original::printable::formatString(TYPE*\ \textcolor{keyword}{const}\&\ ptr)\ -\/>\ std::string}
 \DoxyCodeLine{00117\ \ \ \ \ \{}
 \DoxyCodeLine{00118\ \ \ \ \ \ \ \ \ std::stringstream\ ss;}
 \DoxyCodeLine{00119\ \ \ \ \ \ \ \ \ ss\ <<\ \textcolor{stringliteral}{"{}@"{}}\ <<\ ptr;}
@@ -125,7 +125,7 @@
 \DoxyCodeLine{00121\ \ \ \ \ \}}
 \DoxyCodeLine{00122\ }
 \DoxyCodeLine{00123\ \ \ \ \ \textcolor{keyword}{template}<>}
-\DoxyCodeLine{00124\ \ \ \ \ \textcolor{keyword}{auto}\ original::printable::formatString<const\ char>(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ \textcolor{keyword}{const}\ \&ptr)\ -\/>\ std::string\ \{}
+\DoxyCodeLine{00124\ \ \ \ \ \textcolor{keyword}{inline}\ \textcolor{keyword}{auto}\ original::printable::formatString<const\ char>(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ \textcolor{keyword}{const}\ \&ptr)\ -\/>\ std::string\ \{}
 \DoxyCodeLine{00125\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ formatString<std::string>(ptr);}
 \DoxyCodeLine{00126\ \ \ \ \ \}}
 \DoxyCodeLine{00127\ }
