--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -232,12 +232,21 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\chapter{Concept Index}
+\input{concepts}
 \chapter{Hierarchical Index}
 \input{hierarchy}
 \chapter{Class Index}
 \input{annotated}
 \chapter{File Index}
 \input{files}
+\chapter{Concept Documentation}
+\input{conceptoriginal_1_1_comparable}
+\input{conceptoriginal_1_1_compare}
+\input{conceptoriginal_1_1_condition}
+\input{conceptoriginal_1_1_extends_of}
+\input{conceptoriginal_1_1_operation}
+\input{conceptoriginal_1_1_super_of}
 \chapter{Class Documentation}
 \input{classoriginal_1_1abs_transform}
 \input{classoriginal_1_1add_opt_transform}
@@ -334,6 +343,7 @@
 \input{step_iterator_8h_source}
 \input{transform_8h_source}
 \input{transform_stream_8h_source}
+\input{types_8h_source}
 \input{vector_8h_source}
 \input{wrapper_8h_source}
 \input{original_8h_source}
