--- a/docs/latex/classoriginal_1_1_callback_return_type_error.tex
+++ b/docs/latex/classoriginal_1_1_callback_return_type_error.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1_callback_return_type_error}{}\label{classoriginal_1_1_callback_return_type_error}\index{original::CallbackReturnTypeError@{original::CallbackReturnTypeError}}
 
 
-Inheritance diagram for original\+::Callback\+Return\+Type\+Error\+:
-\nopagebreak
+Inheritance diagram for original\+::Callback\+Return\+Type\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::Callback\+Return\+Type\+Error\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::Callback\+Return\+Type\+Error\+:
-\nopagebreak
+Collaboration diagram for original\+::Callback\+Return\+Type\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
