--- a/docs/latex/classoriginal_1_1algorithms.tex
+++ b/docs/latex/classoriginal_1_1algorithms.tex
@@ -21,26 +21,31 @@ Collaboration diagram for original\+::algorithms\+:\nopagebreak
 \Hypertarget{classoriginal_1_1algorithms_ae0daf899ebff5f7866043b18cb187964}\label{classoriginal_1_1algorithms_ae0daf899ebff5f7866043b18cb187964} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const uint32\+\_\+t n, const TYPE \&target) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a2a450c7636b40cfe7164812a43e4f9a3}\label{classoriginal_1_1algorithms_a2a450c7636b40cfe7164812a43e4f9a3} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\Hypertarget{classoriginal_1_1algorithms_a74148ee3b735271c290adf52a211a986}\label{classoriginal_1_1algorithms_a74148ee3b735271c290adf52a211a986} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ace3128d91805af72bcefc57aeb889747}\label{classoriginal_1_1algorithms_ace3128d91805af72bcefc57aeb889747} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const uint32\+\_\+t n, const Callback \&condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\Hypertarget{classoriginal_1_1algorithms_aeaf5e07bf4630bfdd24e43530890d943}\label{classoriginal_1_1algorithms_aeaf5e07bf4630bfdd24e43530890d943} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const uint32\+\_\+t n, const Callback \&condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
 \Hypertarget{classoriginal_1_1algorithms_aec8e57fc926dd144e5e1f421b22a73e8}\label{classoriginal_1_1algorithms_aec8e57fc926dd144e5e1f421b22a73e8} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const TYPE \&target) -\/$>$ uint32\+\_\+t
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a628c16f4661383fc220e3a3dee82693b}\label{classoriginal_1_1algorithms_a628c16f4661383fc220e3a3dee82693b} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition) -\/$>$ uint32\+\_\+t
+\Hypertarget{classoriginal_1_1algorithms_aea0f220851a7744222bc4f4d350d3eec}\label{classoriginal_1_1algorithms_aea0f220851a7744222bc4f4d350d3eec} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\auto {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition) -\/$>$ uint32\+\_\+t
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a6d7afe1ef0403f361753112861dbc765}\label{classoriginal_1_1algorithms_a6d7afe1ef0403f361753112861dbc765} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries equal} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin2, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end2) -\/$>$ bool
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a9cabdaf2fe88e2158fdeec824f091945}\label{classoriginal_1_1algorithms_a9cabdaf2fe88e2158fdeec824f091945} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, Callback operation) -\/$>$ void
+\Hypertarget{classoriginal_1_1algorithms_acb51318fd679ec033c9b95c76d784e3d}\label{classoriginal_1_1algorithms_acb51318fd679ec033c9b95c76d784e3d} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_operation}{original\+::\+Operation}}$<$Callback, TYPE$>$}\\auto {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, Callback operation) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_aa47715644f41ff4acc79a2cb29bfa894}\label{classoriginal_1_1algorithms_aa47715644f41ff4acc79a2cb29bfa894} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const uint32\+\_\+t n, Callback operation) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\Hypertarget{classoriginal_1_1algorithms_a45d6593f07de2a82e8510a86ce25a844}\label{classoriginal_1_1algorithms_a45d6593f07de2a82e8510a86ce25a844} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_operation}{original\+::\+Operation}}$<$Callback, TYPE$>$}\\auto {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const uint32\+\_\+t n, Callback operation) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a2334b1582a399c31031302862cb78ef1}\label{classoriginal_1_1algorithms_a2334b1582a399c31031302862cb78ef1} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries fill} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const TYPE \&value) -\/$>$ void
@@ -54,26 +59,32 @@ Collaboration diagram for original\+::algorithms\+:\nopagebreak
 \Hypertarget{classoriginal_1_1algorithms_a97c00e1c633ebd48e763eae9c5bc7920}\label{classoriginal_1_1algorithms_a97c00e1c633ebd48e763eae9c5bc7920} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+tar) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a77c6c61cc8dcfc2cdffe28bfa5c2c857}\label{classoriginal_1_1algorithms_a77c6c61cc8dcfc2cdffe28bfa5c2c857} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+tar, Callback condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\Hypertarget{classoriginal_1_1algorithms_a5a2dfd078214588f1002d11ffc208643}\label{classoriginal_1_1algorithms_a5a2dfd078214588f1002d11ffc208643} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\auto {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+tar, Callback condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a8aeee5f50c8a1e074c3fada4343701fd}\label{classoriginal_1_1algorithms_a8aeee5f50c8a1e074c3fada4343701fd} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries reverse} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ad4d4f0b8459c94a2d913c046b2cfcf71}\label{classoriginal_1_1algorithms_ad4d4f0b8459c94a2d913c046b2cfcf71} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it2, const Callback \&compares) -\/$>$ bool
+\Hypertarget{classoriginal_1_1algorithms_aa4c257041a405375712de41f52ec6ed1}\label{classoriginal_1_1algorithms_aa4c257041a405375712de41f52ec6ed1} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it2, const Callback \&compares) -\/$>$ bool
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a3e6c177a503518b731f43a995233a534}\label{classoriginal_1_1algorithms_a3e6c177a503518b731f43a995233a534} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares) -\/$>$ void
+\Hypertarget{classoriginal_1_1algorithms_ad4be2e07409a914431bc657b497bd44c}\label{classoriginal_1_1algorithms_ad4be2e07409a914431bc657b497bd44c} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a94e9370ea98523a2657f2d018a4af60f}\label{classoriginal_1_1algorithms_a94e9370ea98523a2657f2d018a4af60f} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares) -\/$>$ void
+\Hypertarget{classoriginal_1_1algorithms_a2c61d172f1a1bb6e401f19cf0dcef4c6}\label{classoriginal_1_1algorithms_a2c61d172f1a1bb6e401f19cf0dcef4c6} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ac78929bc40b4e3dfbdb83b91103c4bec}\label{classoriginal_1_1algorithms_ac78929bc40b4e3dfbdb83b91103c4bec} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares) -\/$>$ void
+\Hypertarget{classoriginal_1_1algorithms_ac1e484320c088e1b53c3817b91944a0b}\label{classoriginal_1_1algorithms_ac1e484320c088e1b53c3817b91944a0b} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a0f85ca792a62ba1b06ad2b8658b681c9}\label{classoriginal_1_1algorithms_a0f85ca792a62ba1b06ad2b8658b681c9} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\auto {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\Hypertarget{classoriginal_1_1algorithms_a926273b74138a74bd51f0fdc67f409f2}\label{classoriginal_1_1algorithms_a926273b74138a74bd51f0fdc67f409f2} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
@@ -81,14 +92,17 @@ Collaboration diagram for original\+::algorithms\+:\nopagebreak
 \Hypertarget{classoriginal_1_1algorithms_a010a8ddaa398d21bec78234162f1ab46}\label{classoriginal_1_1algorithms_a010a8ddaa398d21bec78234162f1ab46} 
 {\footnotesize template$<$typename TYPE$>$ }\\static int64\+\_\+t {\bfseries distance} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a121ee9fc8f6fb2ede64670a5f7aa73d8}\label{classoriginal_1_1algorithms_a121ee9fc8f6fb2ede64670a5f7aa73d8} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static bool {\bfseries all\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
+\Hypertarget{classoriginal_1_1algorithms_ada4b03336a6bc356dd58fe52ae2e01b1}\label{classoriginal_1_1algorithms_ada4b03336a6bc356dd58fe52ae2e01b1} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Condition$<$Callback, TYPE$>$}\\static bool {\bfseries all\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a1106238df14b94942556c52b8e6be674}\label{classoriginal_1_1algorithms_a1106238df14b94942556c52b8e6be674} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static bool {\bfseries any\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
+\Hypertarget{classoriginal_1_1algorithms_a1030ec11e298db67275e06a8b4e129a6}\label{classoriginal_1_1algorithms_a1030ec11e298db67275e06a8b4e129a6} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Condition$<$Callback, TYPE$>$}\\static bool {\bfseries any\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a4861ab5cd836456055e6abebe045f8c6}\label{classoriginal_1_1algorithms_a4861ab5cd836456055e6abebe045f8c6} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static bool {\bfseries none\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
+\Hypertarget{classoriginal_1_1algorithms_af950ec05916d44c221231e150ce2abdb}\label{classoriginal_1_1algorithms_af950ec05916d44c221231e150ce2abdb} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Condition$<$Callback, TYPE$>$}\\static bool {\bfseries none\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a348b1a2155fc635e8e778bfdddf80574}\label{classoriginal_1_1algorithms_a348b1a2155fc635e8e778bfdddf80574} 
 {\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const TYPE \&target)
@@ -96,26 +110,31 @@ Collaboration diagram for original\+::algorithms\+:\nopagebreak
 \Hypertarget{classoriginal_1_1algorithms_a2e07c2f97f2fba93663e126ed9a949d9}\label{classoriginal_1_1algorithms_a2e07c2f97f2fba93663e126ed9a949d9} 
 {\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, uint32\+\_\+t n, const TYPE \&target)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a0ab2d9f08245e05d30bc8e2b9e5375c8}\label{classoriginal_1_1algorithms_a0ab2d9f08245e05d30bc8e2b9e5375c8} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
+\Hypertarget{classoriginal_1_1algorithms_ae8dfef2c25bb8e0eecd272a38abbd90d}\label{classoriginal_1_1algorithms_ae8dfef2c25bb8e0eecd272a38abbd90d} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Condition$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ad25d2c938e8eb99cca2d0bd05d2c06e9}\label{classoriginal_1_1algorithms_ad25d2c938e8eb99cca2d0bd05d2c06e9} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, uint32\+\_\+t n, const Callback \&condition)
+\Hypertarget{classoriginal_1_1algorithms_a6d2bfff357ae21720beffde1dfe522f4}\label{classoriginal_1_1algorithms_a6d2bfff357ae21720beffde1dfe522f4} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Condition$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, uint32\+\_\+t n, const Callback \&condition)
 \item 
 \Hypertarget{classoriginal_1_1algorithms_afb7139d7ffff9543dd49c4b6c96b15ab}\label{classoriginal_1_1algorithms_afb7139d7ffff9543dd49c4b6c96b15ab} 
 {\footnotesize template$<$typename TYPE$>$ }\\static uint32\+\_\+t {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const TYPE \&target)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a1dc1d6cc0ec61b41b2efc98fd51857fe}\label{classoriginal_1_1algorithms_a1dc1d6cc0ec61b41b2efc98fd51857fe} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static uint32\+\_\+t {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
+\Hypertarget{classoriginal_1_1algorithms_a58e9815a0af2a0e1b4147220db337742}\label{classoriginal_1_1algorithms_a58e9815a0af2a0e1b4147220db337742} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Condition$<$Callback, TYPE$>$}\\static uint32\+\_\+t {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&condition)
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a3ba26a44a05a202c4ae0259b2287b95e}\label{classoriginal_1_1algorithms_a3ba26a44a05a202c4ae0259b2287b95e} 
 {\footnotesize template$<$typename TYPE$>$ }\\static bool {\bfseries equal} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin2, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end2)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a873e973d3ba8b644b75a1095b929ce2d}\label{classoriginal_1_1algorithms_a873e973d3ba8b644b75a1095b929ce2d} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static void {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, Callback operation)
+\Hypertarget{classoriginal_1_1algorithms_aa2155ab479e061eb7ae6a4b4586ce970}\label{classoriginal_1_1algorithms_aa2155ab479e061eb7ae6a4b4586ce970} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Operation$<$Callback, TYPE$>$}\\static void {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, Callback operation)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a0ba21e647657089738accf270e2f03c5}\label{classoriginal_1_1algorithms_a0ba21e647657089738accf270e2f03c5} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, uint32\+\_\+t n, Callback operation)
+\Hypertarget{classoriginal_1_1algorithms_a43f3894fb0a24d636b557f9c2373dac3}\label{classoriginal_1_1algorithms_a43f3894fb0a24d636b557f9c2373dac3} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Operation$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, uint32\+\_\+t n, Callback operation)
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a0c73c14858871484fac7fb868430edb3}\label{classoriginal_1_1algorithms_a0c73c14858871484fac7fb868430edb3} 
 {\footnotesize template$<$typename TYPE$>$ }\\static void {\bfseries fill} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const TYPE \&value=TYPE\{\})
@@ -129,29 +148,35 @@ Collaboration diagram for original\+::algorithms\+:\nopagebreak
 \Hypertarget{classoriginal_1_1algorithms_ad1d5ad2274fac8b34c48182cfad406e6}\label{classoriginal_1_1algorithms_ad1d5ad2274fac8b34c48182cfad406e6} 
 {\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+tar)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a3afb4e126ce8f66bfdf27625c9fcd795}\label{classoriginal_1_1algorithms_a3afb4e126ce8f66bfdf27625c9fcd795} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+tar, Callback condition=\mbox{\hyperlink{classoriginal_1_1filter}{filter}}$<$ TYPE $>$\{\})
+\Hypertarget{classoriginal_1_1algorithms_a5e4d32befffd299e18b23780d86b30cc}\label{classoriginal_1_1algorithms_a5e4d32befffd299e18b23780d86b30cc} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Condition$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin\+\_\+tar, Callback condition=\mbox{\hyperlink{classoriginal_1_1filter}{filter}}$<$ TYPE $>$\{\})
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a5d6cd7b121c4a3b84e4f7264fdea3295}\label{classoriginal_1_1algorithms_a5d6cd7b121c4a3b84e4f7264fdea3295} 
 {\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries reverse} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_afdd50bdb5cbaf5513e37777fac0fd179}\label{classoriginal_1_1algorithms_afdd50bdb5cbaf5513e37777fac0fd179} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static bool {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it2, const Callback \&compares)
+\Hypertarget{classoriginal_1_1algorithms_af8f5053253bbcf421b9780d3e73df99d}\label{classoriginal_1_1algorithms_af8f5053253bbcf421b9780d3e73df99d} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static bool {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it2, const Callback \&compares)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ae5fecac3d6d7afc13014cd802a6c08ec}\label{classoriginal_1_1algorithms_ae5fecac3d6d7afc13014cd802a6c08ec} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static void {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares)
+\Hypertarget{classoriginal_1_1algorithms_a17b9eb972676db682be5c0cbfb8f119b}\label{classoriginal_1_1algorithms_a17b9eb972676db682be5c0cbfb8f119b} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a3bce032858dd1725e706499a5c3530ee}\label{classoriginal_1_1algorithms_a3bce032858dd1725e706499a5c3530ee} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static void {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares)
+\Hypertarget{classoriginal_1_1algorithms_ad892ecea662a755f127c150183bd6805}\label{classoriginal_1_1algorithms_ad892ecea662a755f127c150183bd6805} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a323c43c93eab06e76d882e4776a97ccd}\label{classoriginal_1_1algorithms_a323c43c93eab06e76d882e4776a97ccd} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static void {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares)
+\Hypertarget{classoriginal_1_1algorithms_aedc700ae3498b632ac8314133e5c42dc}\label{classoriginal_1_1algorithms_aedc700ae3498b632ac8314133e5c42dc} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares)
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Static Protected Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a049ac4937a44c4a64da1dc2d3983e462}\label{classoriginal_1_1algorithms_a049ac4937a44c4a64da1dc2d3983e462} 
-{\footnotesize template$<$typename TYPE, typename Callback$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares)
+\Hypertarget{classoriginal_1_1algorithms_ad86486c04fc5bb68660fd47a0812948d}\label{classoriginal_1_1algorithms_ad86486c04fc5bb68660fd47a0812948d} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares)
 \end{DoxyCompactItemize}
 
 
