--- a/docs/latex/classoriginal_1_1call_back_checker.tex
+++ b/docs/latex/classoriginal_1_1call_back_checker.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1call_back_checker}{}\label{classoriginal_1_1call_back_checker}\index{original::callBackChecker@{original::callBackChecker}}
 
 
-Collaboration diagram for original\+::call\+Back\+Checker\+:
-\nopagebreak
+Collaboration diagram for original\+::call\+Back\+Checker\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
