--- a/docs/latex/core_8h_source.tex
+++ b/docs/latex/core_8h_source.tex
@@ -33,9 +33,10 @@
 \DoxyCodeLine{00029\ \textcolor{preprocessor}{\#include\ "{}stepIterator.h"{}}}
 \DoxyCodeLine{00030\ \textcolor{preprocessor}{\#include\ "{}transform.h"{}}}
 \DoxyCodeLine{00031\ \textcolor{preprocessor}{\#include\ "{}transformStream.h"{}}}
-\DoxyCodeLine{00032\ \textcolor{preprocessor}{\#include\ "{}vector.h"{}}}
-\DoxyCodeLine{00033\ \textcolor{preprocessor}{\#include\ "{}wrapper.h"{}}}
-\DoxyCodeLine{00034\ }
-\DoxyCodeLine{00035\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//CORE\_H}}
+\DoxyCodeLine{00032\ \textcolor{preprocessor}{\#include\ "{}types.h"{}}}
+\DoxyCodeLine{00033\ \textcolor{preprocessor}{\#include\ "{}vector.h"{}}}
+\DoxyCodeLine{00034\ \textcolor{preprocessor}{\#include\ "{}wrapper.h"{}}}
+\DoxyCodeLine{00035\ }
+\DoxyCodeLine{00036\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//CORE\_H}}
 
 \end{DoxyCode}
