--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -31,6 +31,7 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{src/core/\mbox{\hyperlink{step_iterator_8h_source}{step\+Iterator.\+h}} }{\pageref{step_iterator_8h_source}}{}
 \item\contentsline{section}{src/core/\mbox{\hyperlink{transform_8h_source}{transform.\+h}} }{\pageref{transform_8h_source}}{}
 \item\contentsline{section}{src/core/\mbox{\hyperlink{transform_stream_8h_source}{transform\+Stream.\+h}} }{\pageref{transform_stream_8h_source}}{}
+\item\contentsline{section}{src/core/\mbox{\hyperlink{types_8h_source}{types.\+h}} }{\pageref{types_8h_source}}{}
 \item\contentsline{section}{src/core/\mbox{\hyperlink{vector_8h_source}{vector.\+h}} }{\pageref{vector_8h_source}}{}
 \item\contentsline{section}{src/core/\mbox{\hyperlink{wrapper_8h_source}{wrapper.\+h}} }{\pageref{wrapper_8h_source}}{}
 \end{DoxyCompactList}
