docs: Update docs

--- a/docs/latex/classoriginal_1_1algorithms.tex
+++ b/docs/latex/classoriginal_1_1algorithms.tex
@@ -2,11 +2,12 @@
 \hypertarget{classoriginal_1_1algorithms}{}\label{classoriginal_1_1algorithms}\index{original::algorithms@{original::algorithms}}
 
 
-Collaboration diagram for original\+::algorithms\+:\nopagebreak
+Collaboration diagram for original\+::algorithms\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=170pt]{classoriginal_1_1algorithms__coll__graph}
+\includegraphics[height=550pt]{classoriginal_1_1algorithms__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsubsection*{Public Member Functions}
@@ -14,6 +15,12 @@ Collaboration diagram for original\+::algorithms\+:\nopagebreak
 \item 
 \Hypertarget{classoriginal_1_1algorithms_af23cc3ee3cd3f2cbd7c818bd99f972e5}\label{classoriginal_1_1algorithms_af23cc3ee3cd3f2cbd7c818bd99f972e5} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries distance} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin) -\/$>$ int64\+\_\+t
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a3931d3dab34d5ab22b8a277a32c5c7aa}\label{classoriginal_1_1algorithms_a3931d3dab34d5ab22b8a277a32c5c7aa} 
+{\footnotesize template$<$typename TYPE$>$ }\\\mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries front\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \&it, int64\+\_\+t steps)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a2441621e9f6d9c5ea06b41158631e567}\label{classoriginal_1_1algorithms_a2441621e9f6d9c5ea06b41158631e567} 
+{\footnotesize template$<$typename TYPE$>$ }\\\mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries back\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \&it, int64\+\_\+t steps)
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a5fd59caff75d3a637389dbc116e52622}\label{classoriginal_1_1algorithms_a5fd59caff75d3a637389dbc116e52622} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const TYPE \&target) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
@@ -91,6 +98,12 @@ requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparab
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a010a8ddaa398d21bec78234162f1ab46}\label{classoriginal_1_1algorithms_a010a8ddaa398d21bec78234162f1ab46} 
 {\footnotesize template$<$typename TYPE$>$ }\\static int64\+\_\+t {\bfseries distance} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a0bc1f932f07ab2b2ded2bd2e016c65fb}\label{classoriginal_1_1algorithms_a0bc1f932f07ab2b2ded2bd2e016c65fb} 
+{\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries front\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it, int64\+\_\+t steps)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a9e0541500bd3c6a45eed385579fcffb5}\label{classoriginal_1_1algorithms_a9e0541500bd3c6a45eed385579fcffb5} 
+{\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries back\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it, int64\+\_\+t steps)
 \item 
 \Hypertarget{classoriginal_1_1algorithms_ada4b03336a6bc356dd58fe52ae2e01b1}\label{classoriginal_1_1algorithms_ada4b03336a6bc356dd58fe52ae2e01b1} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
@@ -171,14 +184,118 @@ requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\b
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares)
 \end{DoxyCompactItemize}
+\doxysubsubsection*{Protected Member Functions}
+\begin{DoxyCompactItemize}
+\item 
+{\footnotesize template$<$typename TYPE$>$ }\\auto \mbox{\hyperlink{classoriginal_1_1algorithms_a32d88f6d54cefd49a90a7aecc52f571d}{distance}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin) -\/$>$ int64\+\_\+t
+\end{DoxyCompactItemize}
 \doxysubsubsection*{Static Protected Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{classoriginal_1_1algorithms_ad86486c04fc5bb68660fd47a0812948d}\label{classoriginal_1_1algorithms_ad86486c04fc5bb68660fd47a0812948d} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a60133870e09b4b6f77f5cd294addcbe7}\label{classoriginal_1_1algorithms_a60133870e09b4b6f77f5cd294addcbe7} 
+{\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries front\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it, int64\+\_\+t steps)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a0930e405f1159406a6ab10b45a93ad3e}\label{classoriginal_1_1algorithms_a0930e405f1159406a6ab10b45a93ad3e} 
+{\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries back\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it, int64\+\_\+t steps)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a01b67c1f3f51048502afb562cdc75201}\label{classoriginal_1_1algorithms_a01b67c1f3f51048502afb562cdc75201} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static bool {\bfseries all\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a557bd1795af7f4706f007e1202226d8f}\label{classoriginal_1_1algorithms_a557bd1795af7f4706f007e1202226d8f} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static bool {\bfseries any\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a8ac7060ccca3796b979cf0861ed7d9ca}\label{classoriginal_1_1algorithms_a8ac7060ccca3796b979cf0861ed7d9ca} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static bool {\bfseries none\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{original\+::iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition)
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a554c5e43b07f57e134ddd2c4e5195af8}\label{classoriginal_1_1algorithms_a554c5e43b07f57e134ddd2c4e5195af8} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const TYPE \&target) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a3f749360adc1137ff1434e559baf727c}\label{classoriginal_1_1algorithms_a3f749360adc1137ff1434e559baf727c} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, uint32\+\_\+t n, const TYPE \&target) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_ad787034ee30a8269f75de0acc088dbb3}\label{classoriginal_1_1algorithms_ad787034ee30a8269f75de0acc088dbb3} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a239bf1777003999223ef8e9a2888832f}\label{classoriginal_1_1algorithms_a239bf1777003999223ef8e9a2888832f} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, uint32\+\_\+t n, const Callback \&condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a28cdea9a31195502a245c97fcd491397}\label{classoriginal_1_1algorithms_a28cdea9a31195502a245c97fcd491397} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const TYPE \&target) -\/$>$ uint32\+\_\+t
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a97a530ea7e43e4c7b9d8e5cce7244c9c}\label{classoriginal_1_1algorithms_a97a530ea7e43e4c7b9d8e5cce7244c9c} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition) -\/$>$ uint32\+\_\+t
+\item 
+\Hypertarget{classoriginal_1_1algorithms_ab08e3e0e554e6286db1afebb51693694}\label{classoriginal_1_1algorithms_ab08e3e0e554e6286db1afebb51693694} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries equal} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin2, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end2) -\/$>$ bool
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a57a7c0c09390a59656288361ae724abd}\label{classoriginal_1_1algorithms_a57a7c0c09390a59656288361ae724abd} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_operation}{original\+::\+Operation}}$<$Callback, TYPE$>$}\\static auto {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, Callback operation) -\/$>$ void
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a224b25f7c9b3f17e09c5314d1207ce4e}\label{classoriginal_1_1algorithms_a224b25f7c9b3f17e09c5314d1207ce4e} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_operation}{original\+::\+Operation}}$<$Callback, TYPE$>$}\\static auto {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, uint32\+\_\+t n, Callback operation) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a02fdf858287f2d23d77f9a618e06db64}\label{classoriginal_1_1algorithms_a02fdf858287f2d23d77f9a618e06db64} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries fill} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const TYPE \&value) -\/$>$ void
+\item 
+\Hypertarget{classoriginal_1_1algorithms_aaf1457d1043f8cb134672f17e84b34c0}\label{classoriginal_1_1algorithms_aaf1457d1043f8cb134672f17e84b34c0} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries fill} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, uint32\+\_\+t n, const TYPE \&value) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a4a5a9ee630bf2667e0dee6f0d0f9a138}\label{classoriginal_1_1algorithms_a4a5a9ee630bf2667e0dee6f0d0f9a138} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries swap} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it2) noexcept -\/$>$ void
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a5e4ec455963b895bbda841bbf173a7ed}\label{classoriginal_1_1algorithms_a5e4ec455963b895bbda841bbf173a7ed} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin\+\_\+tar) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a6dfb4d0810bcf43ff2ca2202124ff584}\label{classoriginal_1_1algorithms_a6dfb4d0810bcf43ff2ca2202124ff584} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin\+\_\+tar, Callback condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_ab946814272f2fc5c9650fbc4c8cc069a}\label{classoriginal_1_1algorithms_ab946814272f2fc5c9650fbc4c8cc069a} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries reverse} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+\item 
+\Hypertarget{classoriginal_1_1algorithms_ae853412caa9f8234a88b7da7d706e4cf}\label{classoriginal_1_1algorithms_ae853412caa9f8234a88b7da7d706e4cf} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it2, const Callback \&compares) -\/$>$ bool
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a1dd6ebd7418c7c084564dc17f3de6431}\label{classoriginal_1_1algorithms_a1dd6ebd7418c7c084564dc17f3de6431} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}current, const Callback \&compares) -\/$>$ void
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a966a9beaa104ac64971fd69304538712}\label{classoriginal_1_1algorithms_a966a9beaa104ac64971fd69304538712} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}current, const Callback \&compares) -\/$>$ void
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a1ba4548cc7c6cd0fc520a4c19b525ef2}\label{classoriginal_1_1algorithms_a1ba4548cc7c6cd0fc520a4c19b525ef2} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&compares) -\/$>$ void
+\item 
+\Hypertarget{classoriginal_1_1algorithms_a26b9a5c5bfd5356e7bc9ac9973338106}\label{classoriginal_1_1algorithms_a26b9a5c5bfd5356e7bc9ac9973338106} 
+{\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
+requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}parent, const Callback \&compares) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Member Function Documentation}
+\Hypertarget{classoriginal_1_1algorithms_a32d88f6d54cefd49a90a7aecc52f571d}\index{original::algorithms@{original::algorithms}!distance@{distance}}
+\index{distance@{distance}!original::algorithms@{original::algorithms}}
+\doxysubsubsection{\texorpdfstring{distance()}{distance()}}
+{\footnotesize\ttfamily \label{classoriginal_1_1algorithms_a32d88f6d54cefd49a90a7aecc52f571d} 
+template$<$typename TYPE$>$ \\
+auto original\+::algorithms\+::distance (\begin{DoxyParamCaption}\item[{const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}}]{end}{, }\item[{const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}}]{begin}{}\end{DoxyParamCaption}) -\/$>$ int64\+\_\+t         \hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [protected]}}
+
+-\/--- Implementation of pointer overload version. -\/--- 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
